fix low part text is cut off

--- a/src/styles/chat/UserProfile.css
+++ b/src/styles/chat/UserProfile.css
@@ -69,7 +69,7 @@
 
   font-size: calc(var(--font-size) * 1.5);
   font-weight: 300;
-  line-height: 100%;
+  line-height: calc(var(--font-size) * 2);
 }
 .user-o-info-login {
   line-height: 150%;
